tests/NormalTests/paczka1/small_fuzzy/17393054.err
Error in line 4: WUkE7HZEo A0 97,2
Error in line 6: EWFn A0 98,2
Error in line 8: WUkE7HZEo S259 -6,2
Error in line 9: EWFn S680 54,63
Error in line 12: ?A0
